# ansible-pihole-cloudflared-portainer-docker-compose-rpi4

./: .gitignore  backup-run.sh  config.example.yaml  docker-compose-home-automation.yaml  docker-compose-homeassistant.yaml  docker-compose-pihole.yaml  docker-compose-portainer.yaml  docker-compose-wireguard.yaml  hosts.yaml  myansible.Dockerfile  playbook.yaml  readme.md  run-example.sh  run.sh
raspberry-pi-4/: .gitignore  config.example.yaml  docker-compose-home-automation.yaml  docker-compose-pihole-v6.yaml  docker-compose-pihole.yaml  docker-compose-wireguard.yaml  myansible-new.Dockerfile  playbook.yaml  pyproject.toml  readme.md
raspberry-pi-4/roles/backup_homedir/tasks/: main.yaml
raspberry-pi-4/roles/backup_homedir/templates/: dot-env.j2  restic-ls.sh.j2
raspberry-pi-4/roles/useful_bash_aliases/tasks/: main.yaml
raspberry-pi-4/tasks/: auto-reboot.yaml  docker-run-pihole-v6.yaml  docker-run-pihole.yaml  docker-run-wireguard.yaml  install-tailscale.yaml  shmu-scraper.yaml
raspberry-pi-5/: .gitignore  config.example.yaml  hosts.yaml  lint.sh  playbook.yaml  readme.md  run.sh
raspberry-pi-5/myansible/: build.sh  myansible.Dockerfile  pyproject.toml  shell.sh
raspberry-pi-5/tasks/: 1-install-docker.yaml
tasks/: backup-homedir.yaml  docker-install.yaml  docker-run-homeautomation.yaml  docker-run-pihole.yaml  docker-run-portainer.yaml  docker-run-wireguard.yaml  install-tailscale.yaml  shmu-scraper.yaml  unattended-upgrades.yaml
templates/: zigbee2mqtt--configuration.yaml
tools/grafana-web-ui/: docker-compose.yml  run.sh  stop.sh
(+27 files in other folders)
